# Screening_Platform_lab

./: .env.example  .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
docs/: LANDSCAPE_SCALE_CONTEXT_REVIEW_POLICY.md  PRD_GEE_paid_archive_triage_v6.md  V1_10_RELEASE_NOTES.md  V1_11_RELEASE_NOTES.md  V1_12_RELEASE_NOTES.md  V1_13_RELEASE_NOTES.md  V1_14_RELEASE_NOTES.md  V1_15_RELEASE_NOTES.md  V1_16_RELEASE_NOTES.md  V1_17_RELEASE_NOTES.md  V1_18_RELEASE_NOTES.md  V1_19_RELEASE_NOTES.md  V1_1_OPERATOR_MANUAL_TARGET_TO_EXPORT.md  V1_1_RELEASE_NOTES.md  V1_20_FIELD_TRIAL_VALIDATION_SUMMARY.md  V1_20_PAID_WARNING_PRECHECK_SUMMARY.md  V1_20_RELEASE_NOTES.md  V1_20_REVIEWER_READINESS_CLOSEOUT_SUMMARY.md  V1_2_RELEASE_NOTES.md  V1_3_REAL_STAC_PROVIDER_SMOKE.md  V1_3_RELEASE_NOTES.md  V1_4_RELEASE_NOTES.md  V1_5_LIVE_STAC_METADATA_SMOKE.md  V1_5_RELEASE_NOTES.md  V1_6_RELEASE_NOTES.md  V1_7_RELEASE_NOTES.md  V1_8_RELEASE_NOTES.md  V1_9_RELEASE_NOTES.md  V1_RELEASE_NOTES.md  operator_runbook.md
scripts/: bootstrap_local.ps1  check_env.py  create_sqlite_db.py  smoke_live_v1_5_real_stac_metadata.ps1  verify_phase10_export_audit_release.ps1  verify_phase11_acceptance_release.ps1  verify_phase12_paid_archive_release.ps1  verify_phase13_calibration_release.ps1  verify_phase14_calibration_policy_release.ps1  verify_phase15_calibration_label_release.ps1  verify_phase16_label_pack_manifest_release.ps1  verify_phase17_calibration_label_artifact_release.ps1  verify_phase18_calibration_label_artifact_verify_release.ps1  verify_phase19_calibration_artifact_registry_release.ps1  (+25 more)
(+151 files in other folders)
