[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lawful_anomaly_screening"
version = "1.5.1"
description = "v1.5.1 Phase 0 scaffold for lawful anomaly screening"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lawful_anomaly_screening = ["config/**/*.json", "config/**/*.yaml", "db/**/*.sql"]

[project.scripts]
lawful-anomaly = "lawful_anomaly_screening.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
